--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.4.2",
+    "@mui/material": "^5.10.1",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
